syntax = "proto3";

package example;

option java_package = "com.example";
option java_outer_classname = "ElementProtos";

message Element {
    string id = 1;
    string name = 2;
    int32 age = 3;
    uint32 status = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message Elements {
    repeated Element elements = 1;
}

message ElementFilter {
    string id = 1;
    string name = 2;
    string age = 3;
    string status = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

service ElementService {

    rpc PersistElement (Element) returns (Element) {}

    rpc ListElement (ElementFilter) returns (Elements) {}

}


